# Glee

./: .gitignore  CMakeLists.txt  LICENSE
src/: binary.cpp  binary.h  bnd_file.cpp  bnd_file.h  compression.cpp  compression.h  dcx_file.cpp  dcx_file.h  dllmain.cpp  logging.cpp  logging.h  matbin_file.cpp  matbin_file.h  utils.cpp  utils.h
src/mat/: material_change.cpp  material_change.h  material_mod.cpp  material_mod.h  property_change.h  texture_change.h
src/xml/: ciarencesmod.xml  examplemod.xml  materialMod.xsd
